kubernetes/apps/monitoring/karma/app/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &app karma
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`karma.${SECRET_DOMAIN}`)
      middlewares:
        - name: default
        # - name: basicauth
      services:
        - name: *app
          namespace: monitoring
          port: 8080

  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
